@@ -1,12 +1,15 @@
 package com.example.panbackend.service.impl;
 
+import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.lang.id.NanoId;
 import cn.hutool.core.util.ArrayUtil;
+import com.example.panbackend.dao.jpa.HistoryDao;
 import com.example.panbackend.dao.jpa.UserDao;
 import com.example.panbackend.entity.dto.file.FileDTO;
 import com.example.panbackend.entity.dto.file.FileTreeDTO;
 import com.example.panbackend.entity.param.FileUploadParam;
-import com.example.panbackend.entity.po.User;
+import com.example.panbackend.entity.po.HistoryPo;
+import com.example.panbackend.entity.po.UserPo;
 import com.example.panbackend.exception.ProjectException;
 import com.example.panbackend.response.ResponseCode;
 import com.example.panbackend.response.Result;
@@ -16,6 +19,7 @@ import com.example.panbackend.utils.ProjectConst;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.redis.core.StringRedisTemplate;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -25,49 +29,39 @@ import javax.servlet.http.HttpServletResponse;
 import java.io.BufferedInputStream;
 import java.io.File;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.file.*;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.FileVisitResult;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
+import java.time.Duration;
+import java.time.temporal.ChronoUnit;
 import java.util.*;
-import java.util.concurrent.TimeUnit;
 
 @Service
 @Slf4j
 public class FileServiceImpl implements FileService {
 
-	UserDao userDao;
+	private final UserDao userDao;
 
-	ProjectConst projectConst;
-	PanFileUtils panFileUtils;
+	private final ProjectConst projectConst;
+	private final PanFileUtils panFileUtils;
 
-	StringRedisTemplate stringRedisTemplate;
+	private final StringRedisTemplate stringRedisTemplate;
 
-	@Resource
-	public FileServiceImpl setStringRedisTemplate(StringRedisTemplate stringRedisTemplate) {
-		this.stringRedisTemplate = stringRedisTemplate;
-		return this;
-	}
+	private final HistoryDao historyDao;
 
-	@Autowired
-	public FileServiceImpl setUserDao(UserDao userDao) {
+	public FileServiceImpl(UserDao userDao, ProjectConst projectConst, PanFileUtils panFileUtils, StringRedisTemplate stringRedisTemplate, HistoryDao historyDao) {
 		this.userDao = userDao;
-		return this;
-	}
-
-	@Autowired
-	public FileServiceImpl setProjectConst(ProjectConst projectConst) {
 		this.projectConst = projectConst;
-		return this;
-	}
-
-	@Autowired
-	public FileServiceImpl setPanFileUtils(PanFileUtils panFileUtils) {
 		this.panFileUtils = panFileUtils;
-		return this;
+		this.stringRedisTemplate = stringRedisTemplate;
+		this.historyDao = historyDao;
 	}
 
-	private Result<String> doUpload(MultipartFile file,Path path){
+	private Result<String> doUpload(MultipartFile file, Path path){
 		String fileName = file.getOriginalFilename();
 		log.info("传输文件到：{}",path);
 		if(fileName==null){
@@ -95,7 +89,18 @@ public class FileServiceImpl implements FileService {
 			return Result.fail(ResponseCode.LOGIC_ERROR,"文件超过大小");
 		}
 		Path path = pathBuilder(param.getPath(), param.getUserID(),divide);
-		return doUpload(param.getFile(), path);
+		Result<String> upload = doUpload(param.getFile(), path);
+		if(upload.getCode()==200){
+			File file = path.toFile();
+			HistoryPo po = HistoryPo.getInstance(
+					FileUtil.getType(file),
+					file.getName(),
+					panFileUtils.getDataSize(FileUtil.size(file)),
+					HistoryPo.HistoryType.UPLOAD
+			);
+			historyDao.save(po);
+		}
+		return upload;
 	}
 
 	private static boolean checkSize(MultipartFile file,int size,String unit){
@@ -136,12 +141,7 @@ public class FileServiceImpl implements FileService {
 		response.setContentType("application/octet-stream");
 		response.setCharacterEncoding("utf-8");
 		response.setContentLength((int) file.length());
-		try {
-			response.setHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(file.getName(), "utf-8"));
-		} catch (UnsupportedEncodingException e) {
-			log.error("文件名格式化错误:" + path);
-			return Result.fail(ResponseCode.INVALID_PARAMETER,"文件名格式化错误");
-		}
+		response.setHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(file.getName(), StandardCharsets.UTF_8));
 		ServletOutputStream ops = null;
 		try(
 				BufferedInputStream stream = new BufferedInputStream(Files.newInputStream(file.toPath()))
@@ -154,7 +154,7 @@ public class FileServiceImpl implements FileService {
 				ops.flush();
 			}
 		}catch (IOException e){
-			log.error("{} check",e);
+			log.error("{} check",e.toString());
 			return Result.fail(ResponseCode.DEFAULT_ERROR,"下载时出现异常");
 		}finally {
 			try {
@@ -171,7 +171,18 @@ public class FileServiceImpl implements FileService {
 	@Override
 	public Result<String> fileDownLoad(HttpServletResponse response,String path,int userId,String divide)  {
 		Path tempPath = pathBuilder(path, userId,divide);
-		return doDownLoad(response, tempPath);
+		Result<String> downLoad = doDownLoad(response, tempPath);
+		if (downLoad==null) {
+			File file = tempPath.toFile();
+			HistoryPo po = HistoryPo.getInstance(
+					FileUtil.getType(file),
+					file.getName(),
+					panFileUtils.getDataSize(FileUtil.size(file)),
+					HistoryPo.HistoryType.DOWNLOAD
+			);
+			historyDao.save(po);
+		}
+		return downLoad;
 	}
 
 	@Override
@@ -264,7 +275,7 @@ public class FileServiceImpl implements FileService {
 		Path rootPath = pathBuilder(path,userId,divide);
 		log.info("delete{}",rootPath);
 		try {
-			Files.walkFileTree(rootPath,new SimpleFileVisitor<Path>(){
+			Files.walkFileTree(rootPath, new SimpleFileVisitor<>() {
 
 				/**
 				 * Invoked for a file in a directory.
@@ -272,7 +283,7 @@ public class FileServiceImpl implements FileService {
 				 * <p> Unless overridden, this method returns {@link FileVisitResult#CONTINUE
 				 * CONTINUE}.
 				 *
-				 * @param file 查看的对象
+				 * @param file  查看的对象
 				 * @param attrs 无用
 				 */
 				@Override
@@ -282,9 +293,10 @@ public class FileServiceImpl implements FileService {
 					String key = stringRedisTemplate
 							.opsForValue()
 							.get(projectConst.getFileToKey() + i);
-					if(key!=null){
+					if (key != null) {
 						stringRedisTemplate.delete(key);
 					}
+					stringRedisTemplate.delete(projectConst.getFileToKey() + i);
 					Files.delete(file);
 					return super.visitFile(file, attrs);
 				}
@@ -314,35 +326,70 @@ public class FileServiceImpl implements FileService {
 		}
 	}
 
+
 	/**
 	 * share file
 	 *
-	 * @param path 路径
-	 * @param id userID
-	 * @param divide 分隔符
-	 * @param num 保留时间
+	 * @param stringPath stringPath
+	 * @param id id
+	 * @param divide divide
+	 * @param leftMin num
 	 * @return {@link Result}
 	 * @see Result
 	 * @see String
 	 */
 	@Override
-	public Result<String> shareFile(String path, int id,String divide,int num) {
-		File file = pathBuilder(path, id, divide).toFile();
+	public Result<String> shareFile(String stringPath, int id,String divide,int leftMin,int numOfShare) {
+		Path path = pathBuilder(stringPath, id, divide);
+		File file = path.toFile();
 		if(!file.exists()){
-			return Result.fail(ResponseCode.LOGIC_ERROR,"文件已不存在");
+			return Result.fail(ResponseCode.LOGIC_ERROR, "文件不存在或已被删除");
 		}
+		String share = doFileShare(file, Duration.of(leftMin, ChronoUnit.MINUTES), Integer.MAX_VALUE);
+		HistoryPo po = HistoryPo.getInstance(
+				FileUtil.getType(file),
+				file.getName(),
+				panFileUtils.getDataSize(FileUtil.size(file)),
+				HistoryPo.HistoryType.DOWNLOAD
+		);
+		historyDao.save(po);
+		return Result.ok(share);
+	}
+
+
+	/**
+	 * do file share
+	 *分享文件
+	 * @param file file
+	 * @param duration key保留时间
+	 * @param receiveTime 文件可以接收的次数
+	 * @return {@link String}
+	 * @see String
+	 */
+	private String doFileShare(File file,Duration duration,int receiveTime){
 		String fileToKeyKey = projectConst.getFileToKey() + file.hashCode();
-		String res = stringRedisTemplate.opsForValue().get(fileToKeyKey);
-		if(res==null){
+		//获取hash的key
+		String hashMapKey = stringRedisTemplate.opsForValue().get(fileToKeyKey);
+		if(hashMapKey==null){
+			//生成key
 			String key = NanoId.randomNanoId(8);
-			int i = file.hashCode();
-			stringRedisTemplate.opsForValue().set(projectConst.getFileToKey()+i,key,num, TimeUnit.HOURS);
-			stringRedisTemplate.opsForValue().set(projectConst.getKeyToFile()+key,file.getAbsolutePath(),num,TimeUnit.HOURS);
-			return Result.ok(key);
+			stringRedisTemplate.opsForValue().set(projectConst.getFileToKey()+file.hashCode(),key,duration);
+			//构建文件信息
+			HashMap<String, String> fileInfo = new HashMap<>();
+			fileInfo.put(projectConst.getFilePath(),file.getAbsolutePath());
+			fileInfo.put(projectConst.getFileReceiveTime(), Integer.toString(receiveTime));
+			//提交
+			stringRedisTemplate.opsForHash().putAll(projectConst.getKeyToFile()+key,fileInfo);
+			stringRedisTemplate.expire(projectConst.getFileToKey(), duration);
+			//返回取件码
+			return key;
 		}
-		stringRedisTemplate.expire(fileToKeyKey,num,TimeUnit.HOURS);
-		stringRedisTemplate.expire(res,num,TimeUnit.HOURS);
-		return Result.ok(res);
+		//为文件到哈希的key进行续命
+		stringRedisTemplate.expire(fileToKeyKey,duration);
+		stringRedisTemplate.expire(projectConst.getKeyToFile()+hashMapKey,duration);
+		//保证重设可分享的次数
+		stringRedisTemplate.opsForHash().put(projectConst.getKeyToFile()+hashMapKey,projectConst.getFileReceiveTime(),Integer.toString(receiveTime));
+		return hashMapKey;
 	}
 
 	/**
@@ -356,14 +403,29 @@ public class FileServiceImpl implements FileService {
 	 */
 	@Override
 	public Result<String> receiveFile(HttpServletResponse response, String code) {
-		String res = stringRedisTemplate.opsForValue()
-				.get(projectConst.getKeyToFile() + code);
-
-		log.info("接收文件的路径为{}",res);
-		if(res==null){
+		String numText = (String) stringRedisTemplate.opsForHash().get(projectConst.getKeyToFile() + code, projectConst.getFileReceiveTime());
+		if(numText==null||numText.isBlank()){
 			return Result.fail(ResponseCode.NOT_FOUND,"文件已删除或分享超时");
 		}
-		return doDownLoad(response, Paths.get(res));
+		int receiveTime = Integer.parseInt(numText);
+		//寻找对应路径
+		String path = (String) stringRedisTemplate.opsForHash().get(projectConst.getKeyToFile() + code, projectConst.getFilePath());
+		log.info("接收文件的路径为{}",path);
+		if(path==null){
+			log.error("redis 分享文件一致性出错");
+			stringRedisTemplate.delete(projectConst.getKeyToFile()+code);
+			return Result.fail(ResponseCode.DEFAULT_ERROR,"服务器内部错误");
+		}
+		Path filePath = Path.of(path);
+		//防止高并发访问下击穿
+		if(receiveTime<=0){
+			stringRedisTemplate.delete(projectConst.getFileToKey()+ filePath.toFile().hashCode());
+			stringRedisTemplate.delete(projectConst.getKeyToFile()+code);
+			return Result.fail(ResponseCode.LOGIC_ERROR, "文件分享次数已达上限");
+		}
+		receiveTime-=1;
+		stringRedisTemplate.opsForHash().put(projectConst.getKeyToFile()+code,projectConst.getFileReceiveTime(),Integer.toString(receiveTime));
+		return doDownLoad(response, filePath);
 	}
 
 	/**
@@ -376,15 +438,48 @@ public class FileServiceImpl implements FileService {
 	 * @see Path
 	 */
 	private Path pathBuilder(String path,int userID,String divide){
-		Optional<User> user = userDao.findById(userID);
-		if(!user.isPresent()){
+		Optional<UserPo> user = userDao.findById(userID);
+		if(user.isEmpty()){
 			throw new ProjectException("无对应用户",ResponseCode.LOGIC_ERROR);
 		}
 		String[] split = path.split(divide);
 		String[] param = ArrayUtil.sub(split, 1, split.length);
 		return projectConst
 				.getPrePath()
-				.resolve(Integer.toString(userID)).resolve(Paths.get(split[0], param));
+				.resolve(Integer.toString(userID)).resolve(Path.of(split[0], param));
+	}
+
+	@Override
+	public Result<String> shareAirDrop(MultipartFile multipartFile,int numOfShare){
+		Path path = projectConst.getPrePath().resolve(Integer.toString(projectConst.getAirDropUserID())).resolve(multipartFile.getName());
+		long size = multipartFile.getSize();
+		if(size>projectConst.getAirDropSizeLimit()){
+			return Result.fail(ResponseCode.INVALID_PARAMETER,"文件太大了♂,最大50MB");
+		}
+		Result<String> result = doUpload(multipartFile, path);
+		if (result.getCode()!=200){
+			return Result.fail(ResponseCode.DEFAULT_ERROR,"文件上传失败，无法空投");
+		}
+		File file = path.toFile();
+		String shareCode = doFileShare(file, Duration.of(projectConst.getAirDropTTL(), ChronoUnit.MINUTES),numOfShare);
+		return Result.ok(shareCode);
+	}
+
+	@Scheduled(fixedDelay = 120*1000)
+	private void freshAirDrop() throws IOException {
+		File file = projectConst.getPrePath().resolve(Integer.toString(projectConst.getAirDropUserID())).toFile();
+		if(!file.exists()){
+			Files.createDirectories(file.toPath());
+		}
+		File[] files=file.listFiles();
+		files=files==null?new File[0]:files;
+		for (File cur : files) {
+			int code = cur.hashCode();
+			String res = stringRedisTemplate.opsForValue().get(projectConst.getFileToKey() + code);
+			if(res==null){
+				Files.deleteIfExists(cur.toPath());
+			}
+		}
 	}
 
 
